--- a/windowsAPI.vcxproj
+++ b/windowsAPI.vcxproj
@@ -215,6 +215,7 @@
     <ClCompile Include="object.cpp" />
     <ClCompile Include="objectManager.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="playerStats.cpp" />
     <ClCompile Include="playGround.cpp" />
     <ClCompile Include="progressBar.cpp" />
     <ClCompile Include="sceneManager.cpp" />
