--- a/windowsAPI.vcxproj
+++ b/windowsAPI.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="enemyManager.h" />
     <ClInclude Include="eventManager.h" />
     <ClInclude Include="gameNode.h" />
+    <ClInclude Include="iEvent.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="imageManager.h" />
     <ClInclude Include="inGameScene.h" />
@@ -205,6 +206,7 @@
     <ClCompile Include="enemyManager.cpp" />
     <ClCompile Include="eventManager.cpp" />
     <ClCompile Include="gameNode.cpp" />
+    <ClCompile Include="iEvent.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="imageManager.cpp" />
     <ClCompile Include="inGameScene.cpp" />
